tests/errors/multiline_string.moss
fn main() {
  println(
    "Hello,
#   ^^^^^^^ invalid token
    world!"
  );
}
